# dgm-2024.2

./: .gitignore  1_datasetStructure_speakerEmbeddings.ipynb  README.md
projetos/GenHAR/: Makefile  README.md  pyproject.toml  requirements.txt
projetos/GenHAR/notebooks/: Exploring datasets.ipynb  compare.ipynb  tgsm_time_gan_har.ipynb  tgsm_time_gan_har_plot.ipynb
projetos/GenHAR/src/: main.py  main_eval.py  main_visualize.py
projetos/GenHAR/src/data_processor/: data_read.py  data_transform.py  download_dataset.py  librosa_spectogram.py  standartized_balanced.py  torch_spectogram.py
projetos/GenHAR/src/eval/: Mach_learning.py  dataset_eval copy.py  dataset_eval.py  evaluator copy.py  evaluator.py  real_synthetic_eval.py  tsne_real_syn.py
projetos/GenHAR/src/evals/: evaluator.py
projetos/GenHAR/src/models/: data_generate.py
projetos/GenHAR/src/utils/: dataset_utils.py  log.py  report_ut.py  setup.py
projetos/GenHAR/tests/all/: all_config.yaml  all_config_2.yaml
projetos/GenHAR/tests/diffusion/: unet1d_config.yaml
projetos/ReCycleGAN/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
projetos/ReCycleGAN/docs/: CycleGAN-turbo.md  Nexet.md  Results.md  mkdocs.yml  workflow.py
projetos/ReCycleGAN/docs/assets/: discriminator.xml  generator.xml  loss.xml  test  workflow  workflow.xml
projetos/ReCycleGAN/docs/docs/: index.md
projetos/ReCycleGAN/docs/site/: 404.html  index.html  sitemap.xml
projetos/ReCycleGAN/recyclegan/: LICENSE  Makefile  README.md  pyproject.toml
projetos/ReCycleGAN/recyclegan/docs/: mkdocs.yml
projetos/ReCycleGAN/recyclegan/notebooks/: Extract_DayNight.ipynb
projetos/ReCycleGAN/recyclegan/recyclegan/: __init__.py  dataset.py  features.py  plots.py
projetos/ReCycleGAN/src/: __init__.py
projetos/ReCycleGAN/src/dataset/: download.py  evaluate.py  extract_dataset.py  extract_nexet.py  manage_wandb_dataset.py
projetos/ReCycleGAN/src/metrics/: Readme.md  __init__.py  fid.py  lpips.py
projetos/ReCycleGAN/test/: test_cases.json  test_dataloader.py  test_metrics.py  test_vanilla_gan.py  todo.md
(+401 files in other folders)
