[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gen_har"
version = "0.0.1"
description = "Projeto da disciplina IA376 com o objetivo de explorar m\u00e9todos de gera\u00e7\u00e3o de dados para Human Activity Recognition (HAR)"
authors = [
  { name = "Amparo Diaz \u0026 Bruno Silva" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["gen_har"]
force_sort_within_sections = true
